2005-05-12  Eli Zaretskii  <eliz@gnu.org>

	* gnu-v3-abi.c (init_gnuv3_ops): Cast is_gnu_v3_mangled_dtor and
	is_gnu_v3_mangled_ctor to avoid compiler warnings.

	* config/djgpp/config.sed: Adapt to latest Autoconf.

	* config/djgpp/djconfig.sh: Add -Wpointer-arith and
	-Wuninitialized to the build warnings.

2005-05-11  Eli Zaretskii  <eliz@gnu.org>

	* config/djgpp/fnchange.lst: Add mappings for inttypes*.m4,
	ChangeLog-2004, reg-cris*.dat, dw2-intermix.*, semcris*-switch.c.
	Fix mappings for hilo-hazard-?.s.

	* config/djgpp/README: Update GDB versions and my email address.

2005-05-09  Andrew Cagney  <cagney@gnu.org>

	Use gdb_byte in preference to bfd_byte.
	* gdbarch.sh: Update.
	* gdbarch.h, gdbarch.c: Re-generate.
	* ada-lang.c, ada-lang.h, ada-valprint.c, arch-utils.c: Update.
	* c-lang.c, c-lang.h, c-valprint.c, cp-valprint.c: Update.
	* f-lang.c, f-lang.h, f-valprint.c, gdbcore.h, jv-lang.h: Update.
	* jv-valprint.c, language.c, language.h, m2-lang.c: Update.
	* m2-lang.h, m2-valprint.c, objc-lang.c, p-lang.c: Update.
	* p-lang.h, p-valprint.c, regcache.c, scm-lang.c: Update.
	* scm-lang.h, scm-valprint.c, target.c, target.h: Update.
	* tramp-frame.c, valarith.c, valops.c, valprint.c: Update.
	* valprint.h, value.c, value.h: Update.

2005-05-09  Mark Kettenis  <kettenis@gnu.org>

	* vaxbsd-nat.c (vaxbsd_supply_gregset, vaxbsd_collect_gregset):
	Use `gdb_byte *' for regs.
	* vax-tdep.c (vax_supply_gregset): Use `gdb_byte *' for regs;
	(vax_store_arguments, vax_push_dummy_call, vax_return_value): Use
	gdb_byte for buf.
	(vax_breakpoint_from_pc): Change return type to `const gdb_byte
	*'.  Use gdb_byte for break_insn.
	(vax_skip_prologue): Use gdb_byte for op.

	* i387-tdep.c: Remove outdated comments.

	* defs.h: Unconditionally include <sys/types.h>.

2005-05-08  Daniel Jacobowitz  <dan@codesourcery.com>

	* mips-tdep.c (mips_stub_frame_sniffer): Handle .MIPS.stubs
	section like .plt.

2005-05-08  Mark Kettenis  <kettenis@gnu.org>
